<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    tools:context=".ui.main.findQuoteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/shareSymbolField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:fontFamily="monospace"
                android:hint="@string/share_symbol"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/findQuotedateField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:hint="@string/date_from"
                android:inputType="date"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/findQuoteDateToField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:hint="@string/date_to"
                android:inputType="date"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="monospace"
                android:text="@string/tech_analysis"
                android:textSize="15dp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/sma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/smatxt"
                android:fontFamily="monospace"
                android:text="@string/sma"
                android:textSize="15dp"
                android:tooltipText="@string/smatxt" />

            <CheckBox
                android:id="@+id/ema"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/ema"
                android:textSize="15dp"
                android:tooltipText="@string/ematxt" />

            <CheckBox
                android:id="@+id/macd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/macd"
                android:textSize="15dp"
                android:tooltipText="@string/macdtxt" />

            <CheckBox
                android:id="@+id/avg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/macdavg"
                android:textSize="15dp"
                android:tooltipText="@string/macdavgtxt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/intervalLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="monospace"
                android:hint="Analysis Interval"
                android:text="@string/analyse_interval"
                android:textSize="15dp"
                android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp" />

                <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:progressTint="@color/colorPrimaryDark"
                    android:thumbTint="@color/colorPrimaryDark"
                    android:max="8"
                    android:min="2"
                    android:progress="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/findQuoteOK"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:fontFamily="monospace"
                android:onClick="findQuoteOK"
                android:text="@string/find_quote"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="15dp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/findQuoteCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:fontFamily="monospace"
                android:onClick="findQuoteCancel"
                android:text="@string/reset"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="15dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/findQuoteResultLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#EEFFBB"
                android:fontFamily="monospace"
                android:hint="Result of findQuote"
                android:text="Status"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/findQuoteResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="4"
                android:fontFamily="monospace"
                android:hint="Updates status here"
                android:textStyle="bold" />


        </LinearLayout>
    </LinearLayout>
</ScrollView>